[project]
name = "time-to-execstart-analyzer"
version = "0.1.0"
description = "Analyze systemd service activation timing via SSH"
authors = [
    { name = "Ritabroto Ganguly" }
]
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.0.0",
    "pydantic>=2.0"
]

[project.scripts]
time-to-execstart-analyzer = "boot_activation_analyzer.cli:main"